hphp/hack/test/typecheck/keyedcontainer_immutable1.php.exp
File "keyedcontainer_immutable1.php", line 4, characters 3-11:
an object of type KeyedContainer<arraykey, mixed> does not allow array append (Typing[4006])
File "keyedcontainer_immutable1.php", line 3, characters 15-45:
Definition is here
