hphp/hack/test/typecheck/keyedcontainer_immutable1.php
<?hh

function test(KeyedContainer<arraykey, mixed> $kc): void {
  $kc[] = 1;
}
